# subd

./: README.md  list.c  meson.build  subd-core.c  subd-vtable.c  subd-watch.c
include/: list.h  meson.build  subd.h
